# OSSO

./: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  compose.yml
app/: Cargo.toml
app/src/: components.rs  lib.rs
app/src/components/: form.rs
app/src/components/alert/: alert.scss  component.rs
app/src/components/badge/: badge.scss  component.rs
app/src/components/button/: button.scss  component.rs
app/src/components/card/: card.scss  component.rs
app/src/components/checkbox/: checkbox.scss  component.rs
app/src/components/dialog/: component.rs  dialog.scss
app/src/components/form/: component.rs  form.scss  form_field.rs  validation.rs
app/src/components/input/: component.rs  input.scss
app/src/components/label/: component.rs  label.scss
app/src/components/select/: component.rs  select.scss
app/src/components/separator/: component.rs  separator.scss
app/src/components/sidebar/: component.rs  sidebar.scss
app/src/components/switch/: component.rs  switch.scss
app/src/components/table/: component.rs  table.scss
app/src/components/tabs/: component.rs  tabs.scss
app/src/pages/: login.rs
app/src/server/: auth.rs
app/style/: main.scss
migrations/: 20260307022157_create_users.sql
server/: Cargo.toml
server/src/: main.rs
server/src/api/: auth.rs  routes.rs
server/src/repository/: user.rs
server/src/schema/: user.rs
server/src/utils/: jwt.rs
src/: app.rs  main.rs  utils.rs
src/api/: auth.rs  routes.rs
src/repository/: user.rs
src/schema/: auth.rs
src/utils/: argon.rs
